# observability-agent

./: .dockerignore  Dockerfile  LICENSE  README.md  nginx.conf  otel-collector-config.yaml  start-nginx.sh  supervisord.conf
a2a-multi-agent-example/: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  README.md  agent_cards.json  debug_a2a_error.py  debug_fastapi_instrumentation.py  debug_trace_propagation.py  load_env.py  pyproject.toml  test_a2a.py  test_a2a_complete.py  test_trace_propagation.py  test_traceloop_export.py
a2a-multi-agent-example/multi_agent_example/: __init__.py  a2a_agent.py  a2a_main.py  tracing.py  waterfall_exporter.py
a2a-multi-agent-example/multi_agent_example/agents/: __init__.py  a2a_code_reviewer.py  a2a_dev_lead.py  a2a_developer.py  a2a_documentation.py  a2a_security_scanner.py
observability-app/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
observability-app/components/: usage_card.tsx
observability-app/src/: App.css  App.tsx  index.css
observability-app/src/api/: jaeger.ts  loki.ts  prometheus.ts  tempo.ts
observability-app/src/components/: DataTable.tsx  Loader.tsx  LoadingScreen.tsx  LogExplorer.tsx  MetricCard.tsx  Sidebar.tsx
observability-app/src/hooks/: useJaeger.ts  useLogs.ts  useMetrics.ts  useTraces.ts
