[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-example"
version = "0.1.0"
description = "A fun multi-agent example with A2A communication and OpenLLMetry tracing"
authors = [{name = "Conference Demo", email = "demo@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "colorama>=0.4.6",
    "rich>=14.1.0",
    "pydantic>=2.11.7",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "aiofiles>=24.1.0",
    "gitpython>=3.1.45",
    "openai>=1.101.0",
    "a2a-sdk>=0.3.3",
    "starlette>=0.32.0",
    "sse-starlette>=1.6.5",
    "python-dotenv>=1.1.1",
    "traceloop-sdk>=0.46.1",
]

[project.scripts]
run-agents = "multi_agent_example.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "traceloop-sdk>=0.46.1",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "bandit>=1.8.6",
    "pylint>=3.3.8",
    "mypy>=1.17.1",
]
